# omero-renamer

./: .gitignore  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pytest.yml
requirements/: requirements-docs.txt  requirements-lint.txt  requirements-test.txt  requirements-types.txt
src/omero_renamer/: __about__.py  omero_renamer.py
src/python_template/: __init__.py
tests/: __init__.py
